Final pass through the paper.

--- a/papers/2012-ftfjp/2012-pipejam.bib
+++ b/papers/2012-ftfjp/2012-pipejam.bib
@@ -31,3 +31,27 @@
  year = 2011,
  OMITpublisher = {ACM},
 }
+
+@article{cooper10predicting,
+    title = {{Predicting protein structures with a multiplayer online game}},
+    author = {Cooper, Seth and Khatib, Firas and Treuille, Adrien and
+Barbero, Janos and Lee, Jeehyung and Beenen, Michael and
+Leaver-Fay, Andrew and Baker, David and Popovi\'{c}, Zoran and
+{Foldit Players}},
+    doi = {10.1038/nature09304},
+    issn = {0028-0836},
+    journal = {Nature},
+    number = {7307},
+    pages = {756--760},
+    url = {http://dx.doi.org/10.1038/nature09304},
+    volume = {466},
+    year = {2010}
+}
+
+@PhdThesis{cooper11phd,
+  author = 	 {Cooper, Seth},
+  title = 	 {A Framework for Scientific Discovery through Video Games},
+  school = 	 {University of Washington, Seattle, WA},
+  year = 	 {2011},
+}
+
