Remove stray period

--- a/papers/2012-ftfjp/2012-pipejam.tex
+++ b/papers/2012-ftfjp/2012-pipejam.tex
@@ -413,7 +413,7 @@ The basic idea behind Pipe Jam is simple and lends itself to quick
 learning and enjoyable play.  We now explain some additional game
 mechanics that add interest and challenge.  (These game mechanics are
 much easier experienced than textually described. See a video at the
-project homepage\footnote{\url{http://www.cs.washington.edu/verigames}.}.)
+project homepage\footnote{\url{http://www.cs.washington.edu/verigames}}.)
 
 \begin{description}
 
