Add ACM classification, adapt Tim's email, adapt layout.

--- a/papers/2012-ftfjp/2012-pipejam.tex
+++ b/papers/2012-ftfjp/2012-pipejam.tex
@@ -93,8 +93,7 @@ Zoran Popovi\'c\\
 %
 {\normalsize
 Center for Game Science, University of Washington}\\
-\url{{scooper,zoran}@cs.washington.edu},
-\url{timothy.pavlik@gmail.com}
+\url{{scooper,pavlik,zoran}@cs.washington.edu}
 }
 
 \date{}
@@ -128,14 +127,16 @@ project and our Pipe Jam prototype game.
 
 \end{abstract}
 
-% A category with the (minimum) three required fields
-% \category{H.4}{Information Systems Applications}{Miscellaneous}
-%A category including the fourth, optional field follows...
-% \category{D.2.8}{Software Engineering}{Metrics}[complexity measures, performance measures]
 
-% \terms{Theory}
+\category{D.2.4}{SOFTWARE ENGINEERING}{Software/Program Verification}[Correctness proofs]
+\category{F.3.1}{LOGICS AND MEANINGS OF PROGRAMS}{Specifying and Verifying and Reasoning about Programs}[Mechanical verification]
+\category{K.8.0}{PERSONAL COMPUTING}{General}[Games]
 
-% \keywords{ACM proceedings, \LaTeX, text tagging}
+\terms{Verification, Economics}
+
+\keywords{crowdsourcing, human, verification, games, type system}
+
+
 
 \iffalse
 
@@ -1457,8 +1458,6 @@ This work was supported by DARPA Grant FA8750-11-2-0221.  Brian Britigan
 and Marianne Lee drew the Pipe Jam art.  We thank Drew Dean for his
 encouragement and feedback.
 
-
-\pagebreak
 \bibliographystyle{abbrv}
 \bibliography{2012-pipejam,bibstring-abbrev,ernst,invariants,other,types,pag,sideeff,refs}
 
