--- a/website/README
+++ b/website/README
@@ -2,47 +2,113 @@
 --------------------------------
 Site Location:
 
-The current location of the site is on the abstract.cs.washington.edu server under the path /homes/abstract/bdwalker/www
+The current location of the site is on the abstract.cs.washington.edu server under the path 
+/homes/abstract/bdwalker/www
 
-The permissions group is set to the verigames group with read, write and execute permissions.  The user permissions allow only for read and execute. 
+The permissions group is set to the verigames group with read, write and execute permissions.  
+The user permissions allow only for read and execute. 
 
 --------------------------------
 
 Site Structure:
 
-The root contains several files as well as directories.  The files and their descriptions are as follows:
+The root contains several files as well as directories.  The files and their descriptions 
+are as follows:
 
-index.php:  This is the homepage and currently provides the user with a way to upload their files.  
+index.php:  This is the home page and currently provides the user with a way to upload their files.  
 
-results.html: This site is where the user will be redirected after completing a game.  Here they can see the marked up code they uploaded with the results from the game. 
+results.html: This site is where the user will be redirected after completing a game.  Here they 
+can see the marked up code they uploaded with the results from the game. 
 
-removeAll.php: A script to remove all the contents of the upload folder. See Misc. below. 
+removeAll.php: A script to remove all the contents of the upload folder. See Misc. below.
+
+webpage.html: This is the site that contains the actual PipeJam game. It loads the flash .swf as 
+well as manages the game settings and resulting xml files.  
 
 
-There are also eight main folders in the root directory.  They are as follows:
 
-flash_files:  Stores all the flash related content for the site, including the webgame.swf file which is the game flash file. 
+There are also nine main folders in the root directory.  They are as follows:
+
+flash_files:  Stores all the flash related content for the site, including the webgame.swf file 
+which is the game flash file. 
 
 scripts: Holds all the main Javascript and PHP scripts used by the site. 
 
-samples:  Holds any sample .xml files that allow a user to play a game without uploading their own content. 
+samples:  Holds any sample .xml files that allow a user to play a game without uploading their
+own content. 
 
-styles: Holds all the .css stylesheets for the site.  The name of the css stylesheet should correpsond directly with the page they define the style for. 
+styles: Holds all the .css stylesheets for the site.  The name of the css stylesheet should correspond
+directly with the page they define the style for. 
 
-uploads:  This folder stores any files uploaded by a user of the site.  The folder will contain subfolder with unique guid's.  In each folder all of the file the user uploaded and any of the output produced by the parsers and the world.xml will be located. Any error text will also be located in this folder. 
+uploads:  This folder stores any files uploaded by a user of the site.  The folder will contain 
+sub-folder with unique guid's.  In each folder all of the file the user uploaded and any of the
+output produced by the parsers and the world.xml will be located. Any error text will also be
+located in this folder. 
 
-JQueryUI: This is a folder that stores the JQuery framework.  JQuery is a downloadable Javascript framework that can be downloaded from www.jquery.com
+JQueryUI: This is a folder that stores the JQuery framework.  JQuery is a downloadable Javascript
+framework that can be downloaded from www.jquery.com
 
 java: Stores all the java code required for the site.  
 
-resources: Stores all the media files for the site design. (background images, button images, logos, etc.)
+resources: Stores all the media files for the site design. (background images, button images,
+logos, etc.)
+
+uploadify: This is a JavaScript plugin that allows for Ajax file uploads.  It is required for the 
+'pretty' interface use on the PipeJam homepage. The folder contains several JavaScript files as well
+as the .swf file used for the "Select Files" button on the homepage.  I have modified a few files 
+in this folder to suit our needs but the majority remains unchanged. 
 --------------------------------
+
+Site File
+
+Below are some important files not mentioned above.  The majority of the functionality is contained
+in the php files and JavaScript files in the scripts folder.  There are four main files that do the
+vast majority of the heavy lifting:
+
+pipejam.php: This file is responsible for the initial verification and upload process.  It accepts
+Ajax requests from index.js with the user selected upload files.  It will then move them to their 
+unique directory, unzip them, compile them and then call the script that generates the xml that will
+be fed into the game.  This is the first place to look if there appears to be problems with the initial
+upload process on the homepage.  
+
+index.js: This is the corresponding JavaScript file for the homepage.  It sends the Ajax requests to
+pipejam.php with the files the user selected to upload.  It also controls the behavior of the uploadify
+object, which is responsible for the file uploads.  It also contains the bindings for the buttons on the
+homepage as well as handling the behavior of the Ajax responses.  It also calls the modal window that 
+displays the status of the uploads.  The modal window is not actually defined in this file but is instead
+defined in jQuery.modal.js.  
+
+results.js:  This is the JavaScript file responsible for displaying the files on the results page.  It 
+sends an Ajax request to annotate.php as well as utilities.php (to print the contents of a file).  It 
+also uses CodeMirror to display the code highlighting and line numbering in the code results window.  It
+also connects the button behavior on the results page. (Download button and file selection buttons). 
+
+annotate.php: This file is responsible for parsing the data received from the game and calling the script
+to annotate the actual .java files.  It will create the updatedXML.xml file after the game is created by
+calling JAIFParser located in the verigames.jar file.  It will also retrieve the annotated .java files
+and print them to the results page. 
+
+utilities.php: This is a file that contains many smaller php functions that don't fit nicely into any of
+the others.  There are currently functions to obtain a new guid that will be used for a new users folder,
+a function to print the contents of a specified file, and function to dynamically produce an error page when
+passed a text file.
+
+There are many other smaller files that I don't list here. However, these are the most important and if
+there is a problem. It is likely that one of these are responsible. 
+
+
+---------------------------------
 
 Updating:
 
-To update the main webgame.swf all that is needed is to replace the file located in flash_files in the root directory. As long as the interface with webgame.html hasn't changed then no further changes are required. However, if webgame.html, the page that references webgame.swf, needs to be modified then please let me know and I'll make the necessary changes. 
+To update the main webgame.swf all that is needed is to replace the file located in flash_files in
+the root directory. As long as the interface with webgame.html hasn't changed then no further changes
+are required. However, if webgame.html, the page that references webgame.swf, needs to be modified
+then please let me know and I'll make the necessary changes. 
 
-The other most common file that will likely need to be updated on a regular basis is verigames.jar.  This file is located in the java file in the root directory.  Currently, only Werner Dietl has permissions to change this file. 
+The other most common file that will likely need to be updated on a regular basis is verigames.jar.  
+This file is located in the java file in the root directory.  Currently, only Werner Dietl has permissions
+to change this file. 
 
 
 --------------------------------
@@ -50,7 +116,11 @@ The other most common file that will likely need to be updated on a regular basi
 Misc.
 
 removeAll.php:
-There is a script file entitle removeAll.php in the root directory of the site.  If you browse to this page in a browser it will remove all the folder in the uploads folder.  This is used as a quick way to clean out the uploads folder during testing.  This will remove ALL folders in the uploads directory. Make sure that if you use this script that you really want to clear the contents.  This will obviously be removed before the site goes live, but it is nice to have in the meantime.
+There is a script file entitle removeAll.php in the root directory of the site.  If you browse to this 
+page in a browser it will remove all the folder in the uploads folder.  This is used as a quick way to 
+clean out the uploads folder during testing.  This will remove ALL folders in the uploads directory. Make
+sure that if you use this script that you really want to clear the contents.  This will obviously be 
+removed before the site goes live, but it is nice to have in the meantime.
 
 
 --------------------------------
