Make sure that copyright statement is in document style. Improve linebreak.

--- a/papers/2012-ftfjp/2012-pipejam.tex
+++ b/papers/2012-ftfjp/2012-pipejam.tex
@@ -185,7 +185,7 @@ playing a game.
 
 The availability of inexpensive formal verification could change the
 economics of software verification and validation, making
-formal\-ly-correct software more cost-effective and thus more
+for\-mal\-ly-correct software more cost-effective and thus more
 widespread, and  leading to systems that are more reliable and
 robust.  
 These benefits would extend throughout the software
