--- a/website/README
+++ b/website/README
@@ -163,19 +163,21 @@ web files should be placed in /var/www.
 
 Step 3:
 
-Download the appropriate JDK 7 binaries for your computer framework.  You will also need to download the Scala binaries 
-from http://www.scala-lang.org/downloads. 
+Download the appropriate JDK 7 binaries for your computer framework.
 
-Once downloaded, they will both need to be placed in the parent directory of the website.  In Ubuntu
+Install Scala.
+The easiest way is:
+  sudo apt-get install scala
+Alternately, download the Scala binaries 
+from http://www.scala-lang.org/downloads
+
+Once downloaded, both Java and Scala binaries need to be placed in the parent directory of the website.  In Ubuntu
 the JDK 7 framework and the Scala framework should be placed in the /var folder or in the parent folder
 of where you placed the web files.  
 
-You will need to manually adjust the paths in the shell script files and the globals.php file.  These 
-are all located in the scripts folder in the website directory.  These should be updated to point
-to the JDK 7 framework and the Scala framework in the parent directory. The globals.php file is located
-in the scripts folder and the shell scripts are located in the scripts folder in a folder called typecheckers. 
-You should only need to adjust the path for JDK 7 in the globals.php file and you should only need to update
-the Scala path in the shell scripts. 
+Edit website/scripts/globals.php to adjust the path for JDK 7.
+Edit the shell scripts in website/scripts/typecheckers/ to update the Scala path.
+
 
 Permissions:
 
