Expand DARPA acknowledgment

--- a/papers/2012-ftfjp/2012-pipejam.tex
+++ b/papers/2012-ftfjp/2012-pipejam.tex
@@ -1454,9 +1454,19 @@ homepage\footnote{\url{http://www.cs.washington.edu/verigames}}.
 
 \section*{Acknowledgments}
  
-This work was supported by DARPA Grant FA8750-11-2-0221.  Brian Britigan
+Brian Britigan
 and Marianne Lee drew the Pipe Jam art.  We thank Drew Dean for his
 encouragement and feedback.
+
+This material is based on research sponsored by Defense Advanced Research
+Project Agency (DARPA) under agreement number FA8750-11-2-0221.  The U.S.
+Government is authorized to reproduce and distribute reprints for Governmental
+purposes notwithstanding any copyright notation thereon.  The views and
+conclusions contained herein are those of the authors and should not be
+interpreted as necessarily representing the official policies or endorsements,
+either expressed or implied, of Defense Advanced Research Project Agency
+(DARPA) or the U.S. Government.
+
 
 \bibliographystyle{abbrv}
 \bibliography{2012-pipejam,bibstring-abbrev,ernst,invariants,other,types,pag,sideeff,refs}
